Add normalize.css and style main image

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
   <title>Frontend Mentor | Recipe page</title>
@@ -16,10 +17,8 @@
 
 <body>
   <main>
-    <div>
-      <figure>
+    <div class="img-container">
         <img src="assets/images/image-omelette.jpeg" alt="A breakfast omelette on a round white plate.">
-      </figure>
     </div>
 
     <h1>Simple Omelette Recipe</h1>
