--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap"
+    rel="stylesheet">
 
   <title>Frontend Mentor | Recipe page</title>
 
@@ -16,14 +20,15 @@
 </head>
 
 <body>
+
+  <header class="img-container">
+    <img src="assets/images/image-omelette.jpeg" alt="A breakfast omelette on a round white plate.">
+  </header>
+
   <main>
-    <div class="img-container">
-        <img src="assets/images/image-omelette.jpeg" alt="A breakfast omelette on a round white plate.">
-    </div>
+    <h1 class="recipe-title">Simple Omelette Recipe</h1>
 
-    <h1>Simple Omelette Recipe</h1>
-
-    <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+    <p class="recipe-details">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
     <section class="prep-details">
@@ -36,7 +41,7 @@
     </section>
 
     <section class="ingredients">
-      <h2>Ingredients</h2>
+      <h2 class="section-title">Ingredients</h2>
       <ul>
         <li>2-3 large eggs</li>
         <li>Salt, to taste</li>
@@ -49,7 +54,7 @@
     <hr>
 
     <section class="instructions">
-      <h2>Instructions</h2>
+      <h2 class="section-title">Instructions</h2>
       <ol>
         <li><span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well
           mixed.
@@ -71,7 +76,7 @@
     <hr>
 
     <section class="nutrition">
-      <h2>Nutrition</h2>
+      <h2 class="section-title">Nutrition</h2>
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
       <table>
         <tbody>
