Style preparation time div

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <section class="prep-details">
       <h3>Preparation time</h3>
       <ul>
-        <li><span>Total</span>: Approximately 10 minutes</li>
-        <li> <span>Preparation</span>: 5 minutes</li>
-        <li><span>Cooking</span>: 5 minutes</li>
+        <li class="prep-marker"><span>Total</span>: Approximately 10 minutes</li>
+        <li class="prep-marker"> <span>Preparation</span>: 5 minutes</li>
+        <li class="prep-marker"><span>Cooking</span>: 5 minutes</li>
       </ul>
     </section>
 
