Style ingredients and instructions sections

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
 
     <section class="prep-details">
       <h3>Preparation time</h3>
-      <ul>
-        <li class="prep-marker"><span>Total</span>: Approximately 10 minutes</li>
-        <li class="prep-marker"> <span>Preparation</span>: 5 minutes</li>
-        <li class="prep-marker"><span>Cooking</span>: 5 minutes</li>
+      <ul class="prep-steps">
+        <li class="small-marker"><span>Total</span>: Approximately 10 minutes</li>
+        <li class="small-marker"><span>Preparation</span>: 5 minutes</li>
+        <li class="small-marker"><span>Cooking</span>: 5 minutes</li>
       </ul>
     </section>
 
     <section class="ingredients">
       <h2 class="section-title">Ingredients</h2>
-      <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+      <ul class="ingredient-list">
+        <li class="small-marker">2-3 large eggs</li>
+        <li class="small-marker">Salt, to taste</li>
+        <li class="small-marker">Pepper, to taste</li>
+        <li class="small-marker">1 tablespoon of butter or oil</li>
+        <li class="small-marker">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
       </ul>
     </section>
 
@@ -55,7 +55,7 @@
 
     <section class="instructions">
       <h2 class="section-title">Instructions</h2>
-      <ol>
+      <ol class="instruction-steps">
         <li><span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well
           mixed.
           You can add a tablespoon of water or milk for a fluffier texture.</li>
