--- a/index.html
+++ b/index.html
@@ -20,86 +20,90 @@
 </head>
 
 <body>
+  <div class="card-container">
+    <header class="img-container">
+      <img src="assets/images/image-omelette.jpeg" alt="A breakfast omelette on a round white plate.">
+    </header>
 
-  <header class="img-container">
-    <img src="assets/images/image-omelette.jpeg" alt="A breakfast omelette on a round white plate.">
-  </header>
+    <main>
+      <h1 class="recipe-title">Simple Omelette Recipe</h1>
 
-  <main>
-    <h1 class="recipe-title">Simple Omelette Recipe</h1>
+      <p class="recipe-details">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs
+        cooked
+        to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
 
-    <p class="recipe-details">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
-      to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+      <section class="prep-details">
+        <h2>Preparation time</h2>
+        <ul class="prep-steps">
+          <li class="small-marker"><span>Total</span>: Approximately 10 minutes</li>
+          <li class="small-marker"><span>Preparation</span>: 5 minutes</li>
+          <li class="small-marker"><span>Cooking</span>: 5 minutes</li>
+        </ul>
+      </section>
 
-    <section class="prep-details">
-      <h3>Preparation time</h3>
-      <ul class="prep-steps">
-        <li class="small-marker"><span>Total</span>: Approximately 10 minutes</li>
-        <li class="small-marker"><span>Preparation</span>: 5 minutes</li>
-        <li class="small-marker"><span>Cooking</span>: 5 minutes</li>
-      </ul>
-    </section>
+      <section class="ingredients">
+        <h2 class="section-title">Ingredients</h2>
+        <ul class="ingredient-list">
+          <li class="small-marker">2-3 large eggs</li>
+          <li class="small-marker">Salt, to taste</li>
+          <li class="small-marker">Pepper, to taste</li>
+          <li class="small-marker">1 tablespoon of butter or oil</li>
+          <li class="small-marker">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        </ul>
+      </section>
 
-    <section class="ingredients">
-      <h2 class="section-title">Ingredients</h2>
-      <ul class="ingredient-list">
-        <li class="small-marker">2-3 large eggs</li>
-        <li class="small-marker">Salt, to taste</li>
-        <li class="small-marker">Pepper, to taste</li>
-        <li class="small-marker">1 tablespoon of butter or oil</li>
-        <li class="small-marker">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-      </ul>
-    </section>
+      <hr>
 
-    <hr>
+      <section class="instructions">
+        <h2 class="section-title">Instructions</h2>
+        <ol class="instruction-steps">
+          <li><span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well
+            mixed.
+            You can add a tablespoon of water or milk for a fluffier texture.</li>
+          <li><span>Heat the pan</span>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+          <li><span>Cook the omelette</span>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to
+            ensure
+            the eggs evenly coat the surface.</li>
+          <li><span>Add fillings (optional)</span>: When the eggs begin to set at the edges but are still slightly runny
+            in
+            the
+            middle, sprinkle your chosen fillings over one half of the omelette.</li>
+          <li><span>Fold and serve</span>: As the omelette continues to cook, carefully lift one edge and fold it over
+            the
+            fillings. Let it cook for another minute, then slide it onto a plate.</li>
+          <li><span>Enjoy</span>: Serve hot, with additional salt and pepper if needed.</li>
+        </ol>
+      </section>
 
-    <section class="instructions">
-      <h2 class="section-title">Instructions</h2>
-      <ol class="instruction-steps">
-        <li><span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well
-          mixed.
-          You can add a tablespoon of water or milk for a fluffier texture.</li>
-        <li><span>Heat the pan</span>: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-        <li><span>Cook the omelette</span>: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to
-          ensure
-          the eggs evenly coat the surface.</li>
-        <li><span>Add fillings (optional)</span>: When the eggs begin to set at the edges but are still slightly runny
-          in
-          the
-          middle, sprinkle your chosen fillings over one half of the omelette.</li>
-        <li><span>Fold and serve</span>: As the omelette continues to cook, carefully lift one edge and fold it over the
-          fillings. Let it cook for another minute, then slide it onto a plate.</li>
-        <li><span>Enjoy</span>: Serve hot, with additional salt and pepper if needed.</li>
-      </ol>
-    </section>
+      <hr>
 
-    <hr>
+      <section class="nutrition">
+        <h2 class="section-title">Nutrition</h2>
+        <p>The table below shows nutritional values per serving without the additional fillings.</p>
+        <table>
+          <tbody>
+            <tr>
+              <th>Calories</th>
+              <td>277kcal</td>
+            </tr>
+            <tr>
+              <th>Carbs</th>
+              <td>0g</td>
+            </tr>
+            <tr>
+              <th>Protein</th>
+              <td>20g</td>
+            </tr>
+            <tr>
+              <th>Fat</th>
+              <td>22g</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+  </div>
 
-    <section class="nutrition">
-      <h2 class="section-title">Nutrition</h2>
-      <p>The table below shows nutritional values per serving without the additional fillings.</p>
-      <table>
-        <tbody>
-          <tr>
-            <th>Calories</th>
-            <td>277kcal</td>
-          </tr>
-          <tr>
-            <th>Carbs</th>
-            <td>0g</td>
-          </tr>
-          <tr>
-            <th>Protein</th>
-            <td>20g</td>
-          </tr>
-          <tr>
-            <th>Fat</th>
-            <td>22g</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-  </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
